--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+    --color-bg-dark: #f5f5f5;
+    --color-bg: #fdfffd;
+    --color-grey: #d1d1d1;
+    --color-text: #22243b;
+    --color-accent: #f16e03;
+    --color-scrollbar: #aaa7a7;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html.dark {
+    --color-bg-dark : #1a1c35;
+    --color-bg: #22243b;
+    --color-grey: #4e4e4e;
+    --color-text: #fdfffd;
+}
+
+
+body {
+    font-size: 1.2rem;
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    accent-color: var(--color-accent);
+    background: rgb(238,174,202);
+background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,0.24461659663865543) 100%);
+}
+
+#root {
+    overflow: hidden;
+    width: 100%;
+    height: 60%;
+    max-width: 500px;
+    background-color: var(--color-bg-dark);
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 10px 10px 27px -7px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 10px 10px 27px -7px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 27px -7px rgba(0,0,0,0.75);
+}
+
+*{
+    box-sizing: border-box;
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+button {
+    outline: none;
+    border: none;
+}
+
+::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--color-bg-dark);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--color-scrollbar);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--color-accent);
 }
